[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["cors"] }
rand = { version = "0.9.1", features = ["std"] }
hex = "0.4.3"
chrono = "0.4.41"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
serde_json = "1.0.140"
